--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.3.0",
+    "axios": "^0.21.1",
+    "element-ui": "^2.15.2",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.7",
+    "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
